--- a/style.css
+++ b/style.css
@@ -1,116 +1,318 @@
+@import url("https://fonts.googleapis.com/css?family=Gaegu");
+.about {
+  position: fixed;
+  z-index: 10;
+  bottom: 10px;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  transition: all 0.2s ease;
+}
 
-@import url(https://fonts.googleapis.com/css?family=Lato:300italic);
 
-html,
 body {
-  width: 100%;
-  height: 100%;
+  background-color: #dec5e1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-family: "Gaegu", cursive;
+  overflow: hidden;
 }
 
-body {
-  background: #ee9ca7;
-}
-
-#cake {
-  display: block;
-  position: relative;
-  margin: -10em auto 0 auto;
-}
-
-/* ============================================== Candle
-*/
-
-.velas {
-  background: #ffffff;
-  border-radius: 10px;
+/* reload button */
+.reload {
   position: absolute;
-  top: 228px;
-  left: 50%;
-  margin-left: -2.4px;
-  margin-top: -8.33333333px;
-  width: 5px;
-  height: 35px;
-  transform: translateY(-300px);
-  backface-visibility: hidden;
-  animation: in 500ms 6s ease-out forwards;
+  top: 0;
+  z-index: 1;
+  color: #010503;
+  transition: all 0.5s 0.5s ease;
+  width: auto;
+  height: auto;
+  opacity: 0;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
 }
-.velas:after,
-.velas:before {
-  background: rgba(255, 0, 0, 0.4);
+
+.reload:hover {
+  color: white;
+  top: 5px;
+}
+
+.reload:after {
+  background-color: #ef6c57;
   content: "";
+  width: 0;
+  height: 2px;
+  opacity: 1;
+  border-radius: 30px;
   position: absolute;
+  bottom: -4px;
+  z-index: -1;
+  transition: width 0.5s 0.5s ease, height 0.5s 0s ease;
+}
+
+.reload:hover:after {
+  transition: width 0.5s 0s ease, height 0.5s 0.5s ease;
+  width: calc(100% + 30px);
+  height: calc(100% + 10px);
+}
+
+/* elements container */
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* main heart */
+.heart {
+  width: 120px;
+  height: 120px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 1s 0.2s ease;
+  opacity: 1;
+}
+
+.heart:hover {
+  width: 180px;
+  height: 180px;
+  cursor: pointer;
+}
+
+/* background heart - animated */
+.heart.anime {
+  animation: heartbeat 0.8s 0.2s ease infinite alternate;
+  position: absolute;
+  cursor: auto;
+}
+
+@keyframes heartbeat {
+  0% {
+    width: 120px;
+    height: 120px;
+    transition: all 1s 0.2s ease;
+  }
+  100% {
+    width: 140px;
+    height: 140px;
+    transition: all 1s 0.2s ease;
+  }
+}
+/* elements that compose the heart */
+.heart:before,
+.heart:after {
+  position: absolute;
+  background-color: #ef6c57;
+  content: "";
+  width: 50%;
+  height: 75%;
+}
+
+.heart:before {
+  transform: rotate(-45deg);
+  border-radius: 400px 400px 0px 100px;
+  left: 16%;
+}
+
+.heart:after {
+  transform: rotate(45deg);
+  border-radius: 400px 400px 100px 0px;
+  right: 16%;
+}
+
+/* active state to grow the heart */
+.heart.active {
+  width: 500px;
+  height: 500px;
+  animation: none !important;
+  transition: all 1s 0.2s ease;
+  cursor: auto;
+  transform: rotate(10deg), rotate(0deg);
+  position: absolute;
+}
+
+.heart:hover.active {
+  width: 500px;
+  height: 500px;
+}
+
+/* title - click */
+.heart .title {
+  opacity: 1;
+  color: #f2f2f2;
+  position: absolute;
+  transition: all 0.8s 0.5s ease;
+  z-index: 1;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: -3%;
+  animation: title 3s 1s ease infinite;
+}
+
+@keyframes title {
+  0%, 25%, 100% {
+    transform: rotate(0deg);
+  }
+  5%, 15% {
+    transform: rotate(5deg);
+  }
+  10%, 20% {
+    transform: rotate(-5deg);
+  }
+}
+/* active state that hide the title */
+.heart.active .title {
+  opacity: 0;
+  transition: all 0.8s 0s ease;
+}
+
+/* message */
+.heart .message {
+  opacity: 0;
+  color: #f2f2f2;
+  transition: all 0.2s 0s ease;
+  text-align: center;
+  margin: 0 auto;
+  width: 80%;
+  margin-top: -20%;
+  font-size: 16px;
+  z-index: 1;
+}
+
+/* active state that show the message */
+.heart.active .message {
+  opacity: 1;
+  z-index: 1;
+  margin-top: -10%;
+  transition: all 1s 0.5s ease;
+}
+
+/* floating hearts */
+.hearts {
   width: 100%;
-  height: 2.22222222px;
-}
-.velas:after {
-  top: 25%;
-  left: 0;
-}
-.velas:before {
-  top: 45%;
-  left: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
 }
 
-/* ============================================== Fire
-*/
-
-.fuego {
-  border-radius: 100%;
+.heart2,
+.heart3,
+.heart4 {
+  width: 20px;
+  height: 20px;
   position: absolute;
-  top: -20px;
-  left: 50%;
-  margin-left: -2.6px;
-  width: 6.66666667px;
-  height: 18px;
-}
-.fuego:nth-child(1) {
-  animation: fuego 2s 6.5s infinite;
-}
-.fuego:nth-child(2) {
-  animation: fuego 1.5s 6.5s infinite;
-}
-.fuego:nth-child(3) {
-  animation: fuego 1s 6.5s infinite;
-}
-.fuego:nth-child(4) {
-  animation: fuego 0.5s 6.5s infinite;
-}
-.fuego:nth-child(5) {
-  animation: fuego 0.2s 6.5s infinite;
+  opacity: 0;
+  z-index: -1;
+  transition: all 1s ease;
 }
 
-/* ============================================== Animation Fire
-*/
+.heart2.active {
+  opacity: 1;
+  animation: floatHearts1 2s 0.2s ease;
+}
 
-@keyframes fuego {
-  0%, 100% {
-    background: rgba(254, 248, 97, 0.5);
-    box-shadow: 0 0 40px 10px rgba(248, 233, 209, 0.2);
-    transform: translateY(0) scale(1);
+.heart3.active {
+  opacity: 1;
+  animation: floatHearts2 2s 0.2s ease;
+}
+
+.heart4.active {
+  opacity: 1;
+  animation: floatHearts3 2s 0.2s ease;
+}
+
+@keyframes floatHearts1 {
+  0% {
+    width: 20px;
+    height: 20px;
+    left: 50%;
+    top: 60%;
+    transform: rotate(0deg);
   }
   50% {
-    background: rgba(255, 50, 0, 0.1);
-    box-shadow: 0 0 40px 20px rgba(248, 233, 209, 0.2);
-    transform: translateY(-20px) scale(0);
+    top: 30%;
+  }
+  100% {
+    width: 50px;
+    height: 50px;
+    left: -20%;
+    top: 20%;
+    transform: rotate(-40deg);
   }
 }
-
-@keyframes in {
-  to {
-    transform: translateY(0);
+@keyframes floatHearts2 {
+  0% {
+    width: 20px;
+    height: 20px;
+    right: 50%;
+    top: 60%;
+    transform: rotate(0deg);
+  }
+  100% {
+    width: 100px;
+    height: 100px;
+    right: 0%;
+    top: -20%;
+    transform: rotate(40deg);
   }
 }
-
-.text {
-  color: #c81432;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-weight: 300;
-  font-style:italic;
-  text-align: center;
-  h1 {
-    font-size: 2.4em;
+@keyframes floatHearts3 {
+  0% {
+    width: 20px;
+    height: 20px;
+    right: 50%;
+    top: 50%;
+    transform: rotate(0deg);
   }
-}  
+  50% {
+    top: 100%;
+  }
+  100% {
+    width: 80px;
+    height: 80px;
+    right: 0%;
+    top: 110%;
+    transform: rotate(90deg);
+  }
+}
+.heart2:before,
+.heart2:after,
+.heart3:before,
+.heart3:after,
+.heart4:before,
+.heart4:after {
+  position: absolute;
+  background-color: #ef6c57;
+  content: "";
+  width: 50%;
+  height: 90%;
+  z-index: 2;
+}
 
+.heart2:before,
+.heart3:before,
+.heart4:before {
+  transform: rotate(-45deg);
+  border-radius: 400px 400px 0px 100px;
+  left: 10%;
+}
 
-
+.heart2:after,
+.heart3:after,
+.heart4:after {
+  transform: rotate(45deg);
+  border-radius: 400px 400px 100px 0px;
+  right: 10%;
+}
